secutiy.tf
resource "aws_security_group" "allow-tls-sg" {
  name        = "allow-tls-sg"
  description = "Allow TLS inbound traffic from the internet"
  vpc_id      = aws_vpc.main.id

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS from vpc"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "testing"
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow-tls-sg"
  }
}

resource "aws_security_group" "efs-sg" {
  name        = "allow-efs-sg"
  description = "Allow efs inbound traffic from the internet"
  vpc_id      = aws_vpc.main.id

  ingress {
    description      = "efs-sg"
    from_port        = 2049
    to_port          = 2049
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow-efs-sg"
  }
}
